<resources>
    <string name="app_name">InstaCare+</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_title">InstaCare+</string>
    <string name="action_register">Register</string>
    <string name="health_monitor">Health Monitor</string>
    <string name="spo2">SpO2</string>
    <string name="bp">Blood Pressure</string>
    <string name="ecg">ECG</string>
    <string name="doc">Doctor</string>
    <string name="patient">Patient</string>
    <string name="med_supply">Add Medical Supplies</string>
    <string name="item">Item</string>
    <string name="qty">Quantity</string>
    <string name="price">Price</string>
    <string name="desc">Description</string>
    <string name="add_item">Add Item</string>
    <string name="home">Home</string>
    <string name="consult_menu">Consultation</string>
    <string name="supply_menu">Medical Supplies</string>
    <string name="schedule">Med Schedule</string>
    <string name="medicine_schedule">Medicine Schedule</string>
    <string name="back_btn">Back Button</string>
    <string name="add_btn">Back Button</string>
    <string name="reg_doc">Register as a Doctor</string>
    <string name="reg_pat">Register as a Patient</string>
    <string name="fname">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="verify_docs">Upload Verification Documents</string>
    <string name="doc_type">Specialization</string>
    <string name="presc">Prescription</string>
    <string name="medicine">Add Medicine</string>
    <string name="dnote">Doctor\'s Notes</string>
    <string name="details">Details</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_health_monitor">HealthMonitor</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>