<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.gatech.instacareplus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_consultation"
        android:name="edu.gatech.instacareplus.Consultation"
        android:label="@string/consult_menu"
        tools:layout="@layout/fragment_consultation" />

    <fragment
        android:id="@+id/nav_healthmonitor"
        android:name="edu.gatech.instacareplus.HealthMonitor"
        android:label="@string/health_monitor"
        tools:layout="@layout/fragment_health_monitor" />

    <fragment
        android:id="@+id/nav_supply"
        android:name="edu.gatech.instacareplus.Supply"
        android:label="@string/supply_menu"
        tools:layout="@layout/fragment_supply" />

    <fragment
        android:id="@+id/nav_medsched"
        android:name="edu.gatech.instacareplus.MedSched"
        android:label="@string/medicine_schedule"
        tools:layout="@layout/fragment_consultation" />

</navigation>