<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewHM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="207dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/presc"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/h_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="5pt"
        android:layout_marginTop="35dp"
        android:background="@color/ic_theme"
        app:layout_constraintTop_toBottomOf="@+id/textViewHM"
        tools:layout_editor_absoluteX="64dp" />

    <TextView
        android:id="@+id/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="360dp"
        android:fontFamily="@font/asap"
        android:paddingLeft="5dp"
        android:text="@string/fname"
        android:textColor="@color/ic_theme"
        android:textFontWeight="600"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_line" />

    <TextView
        android:id="@+id/name"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toRightOf="@id/itemText"
        app:layout_constraintStart_toStartOf="@id/itemText"
        app:layout_constraintTop_toBottomOf="@+id/h_line" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="360dp"
        android:fontFamily="@font/asap"
        android:text="@string/age"
        android:textColor="@color/ic_theme"
        android:textFontWeight="600"
        android:paddingLeft="5dp"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="7dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/priceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintLeft_toRightOf="@id/ageText"
        app:layout_constraintStart_toStartOf="@id/ageText"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="360dp"
        android:fontFamily="@font/asap"
        android:paddingLeft="5dp"
        android:text="@string/dnote"
        android:textColor="@color/ic_theme"
        android:textFontWeight="600"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qty" />

    <EditText
        android:id="@+id/dnote"
        android:layout_width="150pt"
        android:layout_height="wrap_content"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/priceText" />

    <TextView
        android:id="@+id/med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="360dp"
        android:fontFamily="@font/asap"
        android:paddingLeft="5dp"
        android:text="@string/medicine"
        android:textColor="@color/ic_theme"
        android:textFontWeight="600"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dnote" />

    <ScrollView
        android:id="@+id/med_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/med"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp">

        <TableLayout
            android:id="@+id/med_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <EditText
                    android:hint="@string/medicine"
                    android:layout_width="60pt"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="12dp"/>
                <EditText
                    android:hint="@string/details"
                    android:layout_width="60pt"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="12dp"/>
                <Button
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/asap"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:textSize="12dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/add"
                    android:textColor="@color/white"/>
            </TableRow>
        </TableLayout>


    </ScrollView>

    <Button
        android:id="@+id/register"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:fontFamily="@font/asap"
        android:text="@string/action_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_list"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>